--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>Bootstrap 5.3.3 version bootstrap</title>
     <!-- Bootstrap related local imports -->
-    <link href="css/bootstrap.min_5.0.2.css" rel="stylesheet" />
-    <script src="js/bootstrap.bundle.min_5.0.2.js"></script>
+    <link href="css/bootstrap_5.3.3.min.css" rel="stylesheet" />
+    <script src="js/bootstrap_5.3.3.bundle.min.js"></script>
   </head>
 
   <body>
